gazelle/languages/js/tests/parse_errors/subbuild/subbuild-bad.ts
// some
// blank
// lines
bad 1

//
//
bad 2


//
//
bad 3